--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "tailwindcss-fluid-type": "^2.0.3"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^11.1.0",
     "@astrojs/svelte": "^5.3.0",
     "@fontsource-variable/inter": "^5.0.13",
     "micromodal": "^0.4.10",
