--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "^11.1.0",
+    "@astrojs/sitemap": "^3.2.1",
     "@astrojs/svelte": "^5.3.0",
     "@fontsource-variable/inter": "^5.0.13",
     "micromodal": "^0.4.10",
